--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/238911.pt">Conferência sobre Eficiência Energética em Belo Horizonte</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/240607.es-419">Los exámenes TOEFL o TEIC no se aceptarán para tramitar visas de estudio</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/falkland-islanders-make-case-for-self-determination-in-honduras">Falkland Islanders make case for self-determination in Honduras</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--4">Advice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/--8">英國貿易投資署和英國智慧財產權官員協助蘇格蘭威士忌協會打擊中國侵權，成功捍衛蘇格蘭原產地地理標示資格</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/201405.it">Insieme in Europa per la sicurezza energetica</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/221237.ja">FOODEX JAPAN 2014に出展する英国企業</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/179024.lt">Siekiant taikos Artimuosiuose Rytuose ir Š.Afrikoje</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/229283.es">El Reino Unido ratifica el Tratado sobre el comercio de armas</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/230636.ja">英国外務省の年次人権報告書で日本の死刑制度を解説</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/296094.es">La Embajada Británica busca socio empresarial para Tea Shop en el Pabellón Británico</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/209252.pt">Tecnologias para Grandes Eventos é tema de Seminário GREAT em SP</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/changes-to-notarial-and-documentary-services">Changes to notarial and documentary services</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-the-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--2">Human Rights Council: 17th Session of the Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/212474.ja">G8認知症サミットが開催されました</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/201656.es-419">Uruguay participa en Cumbre de la Alianza para Gobierno Abierto</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/193179.ur">برطانوی سینئر فارن  آفس منسٹر بیرونیس وارثی کی پاکستان آمد</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uks-minister-for-international-security-strategy-visits-ghana--2">UK’s Minister for International Security Strategy Visits Ghana</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/263762.it">La premiazione dei ragazzi vincitori del Kangourou della lingua inglese 2014</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/233503.es">El Consulado de Palma de Mallorca cerrado temporalmente</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
