--- a/apps/email-alert-api/env-vars.html
+++ b/apps/email-alert-api/env-vars.html
@@ -364,6 +364,13 @@
 </div>
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/email-alert-api/commit/339469922989a1072ecb61e757418efe81de2412">30 Nov 2020</a>
 </div>
