Hourly scheduled redeploy f50d02f68b248b9bce399df205b183dbc4c93f07

--- a/apps/email-alert-api/adr/adr-008-monitoring-and-alerting.html
+++ b/apps/email-alert-api/adr/adr-008-monitoring-and-alerting.html
@@ -364,6 +364,13 @@
 </div>
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/email-alert-api/commit/f8ba4d5eda1a48428283e0e1b4a613311c6cca73">1 Dec 2020</a>
 </div>
