--- a/manual/zendesk.html
+++ b/manual/zendesk.html
@@ -210,11 +210,10 @@
 
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/c8edc193d927bb368577626c816be80c42ab11ad">4 Feb 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/894eef769db48d9f0031db5adfdb6cf96a324acb">1 Jun 2021</a>
 </div>
 
- <h1 id='header'>Zendesk</h1> <p>2nd line Zendesk tickets are technical errors reported by our users - including government publishers -
-and general queries from users of data.gov.uk (&ldquo;DGU&rdquo;), for whom 2nd line provides 1st line support.</p>
+ <h1 id='header'>Zendesk</h1> <p>2nd line Zendesk tickets are technical errors reported by our users, including government publishers.</p>
 <h2 id='get-started'>Get started</h2><p><a href="https://govuk.zendesk.com/auth/v2/login/registration?auth_origin=3194076%2Cfalse%2Ctrue&amp;amp;brand_id=3194076&amp;amp;return_to=https%3A%2F%2Fgovuk.zendesk.com%2Fhc%2Fen-us&amp;amp;theme=hc">Create an account</a>, then ask a fellow 2nd liner to assign a new ticket to
 <code>2nd/3rd Line--Zendesk Administration</code> asking to give you access to <code>2nd Line--GOV.UK Alerts and Issues</code>.</p>
 <p>When you&rsquo;re logged in, you should be looking at the <a href="https://govuk.zendesk.com/agent/filters/360000051009"><code>2nd Line--GOV.UK Alerts and Issues</code> queue</a>.</p>
