--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -444,16 +444,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.ballymena.gov.uk/" class="govuk-link">Ballymena Borough Council</a></li>
-      <li><a href="https://nationalcareersservice.direct.gov.uk/advice/courses/" class="govuk-link">Courses and learning - National Careers Service</a></li>
+      <li><a href="http://www.watford.gov.uk/" class="govuk-link">Watford Borough Council</a></li>
+      <li><a href="http://www.sheffield.gov.uk" class="govuk-link">Sheffield City Council</a></li>
       <li><a href="https://www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/" class="govuk-link">Talking therapy - NHS</a></li>
-      <li><a href="http://www.southtyneside.info/" class="govuk-link">South Tyneside Metropolitan Borough Council</a></li>
-      <li><a href="http://www.hinckleyandbosworthonline.org.uk" class="govuk-link">Hinckley and Bosworth Borough Council</a></li>
-      <li><a href="http://www.carmarthenshire.gov.uk" class="govuk-link">Carmarthenshire County Council</a></li>
-      <li><a href="http://www.charnwood.gov.uk" class="govuk-link">Charnwood Borough Council</a></li>
-      <li><a href="https://getintoteaching.education.gov.uk/" class="govuk-link">Get Into Teaching</a></li>
-      <li><a href="http://www.westsussex.gov.uk/" class="govuk-link">West Sussex County Council</a></li>
-      <li><a href="http://www.adur-worthing.gov.uk/" class="govuk-link">Adur &amp; Worthing Councils</a></li>
+      <li><a href="https://census.gov.uk/" class="govuk-link">Census 2021</a></li>
+      <li><a href="http://ec.europa.eu/citizens-initiative" class="govuk-link">The European Citizens&rsquo; Initiative</a></li>
+      <li><a href="http://www.harlow.gov.uk" class="govuk-link">Harlow District Council</a></li>
+      <li><a href="http://www.nfdc.gov.uk" class="govuk-link">New Forest District Council</a></li>
+      <li><a href="http://www.bolton.gov.uk" class="govuk-link">Bolton Metropolitan Borough Council</a></li>
+      <li><a href="http://www.walsall.gov.uk/" class="govuk-link">Walsall Metropolitan Borough Council</a></li>
+      <li><a href="http://www.redbridge.gov.uk/" class="govuk-link">London Borough of Redbridge Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
