--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/chevening-scholarship-places-in-developing-countries-tripled-for-201516">Chevening Scholarship places in developing countries tripled for 2015/16</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/210389.zh-tw">英國外交部長發表聲明悼念納爾遜•曼德拉</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/atlantic-hurricane-season-are-you-prepared--3">Atlantic Hurricane Season: Are you prepared?</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/first-minister-of-wales-visits-uganda--2">First Minister of Wales visits Uganda</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/closure-of-the-british-embassy-phnom-penh--2">Closure of the British Embassy Phnom Penh</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/womens-leadership-conference--3">Women’s Leadership Conference</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/295391.es-419">La Embajada Británica celebra en junio el Mes Europeo del Clima en Buenos Aires</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/change-to-visa-process-for-applicants-travelling-to-the-uk-for-more-than-6-months--2">Change to visa process for applicants travelling to the UK for more than 6 months</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/farewell-happy-hour-to-celebrate-20162017-chevening-scholars">Farewell ‘happy hour’ to celebrate 2016/2017 Chevening scholars</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/chevening-scholarship-places-in-developing-countries-tripled-for-201516">Chevening Scholarship places in developing countries tripled for 2015/16</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/closure-of-the-british-embassy-phnom-penh--2">Closure of the British Embassy Phnom Penh</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/263388.zh-tw">2014 台灣歐盟司法交流計畫即將在下週舉行</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--2">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/263762.it">La premiazione dei ragazzi vincitori del Kangourou della lingua inglese 2014</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/international-day-against-homophobia-and-transphobia--2">International Day Against Homophobia and Transphobia</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/252606.zh-tw">Chevening 英國政府獎學金開放申請</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/272820.es-419">Canciller británico se refiere a relaciones con América Latina</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/statement-from-the-british-ambassador-to-bahrain--2">Statement from the British Ambassador to Bahrain</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
