--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -444,16 +444,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
+      <li><a href="http://www.wandsworth.gov.uk/" class="govuk-link">London Borough of Wandsworth Council</a></li>
+      <li><a href="http://www.waverley.gov.uk/" class="govuk-link">Waverley Borough Council</a></li>
+      <li><a href="http://www.islington.gov.uk/" class="govuk-link">London Borough of Islington Council</a></li>
+      <li><a href="http://www.carmarthenshire.gov.uk" class="govuk-link">Carmarthenshire County Council</a></li>
       <li><a href="http://www.carrickfergus.org" class="govuk-link">Carrickfergus Borough Council</a></li>
       <li><a href="http://www.preston.gov.uk" class="govuk-link">Preston City Council</a></li>
-      <li><a href="http://www.waverley.gov.uk/" class="govuk-link">Waverley Borough Council</a></li>
+      <li><a href="http://www.adur-worthing.gov.uk/" class="govuk-link">Adur &amp; Worthing Councils</a></li>
+      <li><a href="http://www.bournemouth.gov.uk" class="govuk-link">Bournemouth Borough Council</a></li>
       <li><a href="https://www.pointsoflight.gov.uk/" class="govuk-link">Points of Light</a></li>
-      <li><a href="http://www.iwight.com" class="govuk-link">Isle of Wight Council</a></li>
-      <li><a href="http://www.walsall.gov.uk/" class="govuk-link">Walsall Metropolitan Borough Council</a></li>
-      <li><a href="http://www.thanet.gov.uk" class="govuk-link">Thanet District Council</a></li>
-      <li><a href="http://www.burnley.gov.uk/" class="govuk-link">Burnley Borough Council</a></li>
-      <li><a href="http://www.glasgow.gov.uk" class="govuk-link">Glasgow City Council</a></li>
-      <li><a href="http://www.arun.gov.uk/" class="govuk-link">Arun District Council</a></li>
+      <li><a href="http://www.suffolkcc.gov.uk" class="govuk-link">Suffolk County Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
