Hourly scheduled redeploy 696d3071142813c939889750b0290b04e93c5972

--- a/apps/govuk-load-testing.html
+++ b/apps/govuk-load-testing.html
@@ -397,7 +397,7 @@
 
 
 
-    <li><a href="https://grafana.publishing.service.gov.uk/dashboard/file/govuk-load-testing.json" class="govuk-link">Deployment dashboard</a></li>
+    <li><a href="https://grafana.production.govuk.digital/dashboard/file/govuk-load-testing.json" class="govuk-link">Deployment dashboard</a></li>
 
 
 
