--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--4">Advice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/--16">Ο Βρετανός Πρέσβης Τζων Κίττμερ στην Κρήτη</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/six-monthly-report-to-parliament-on-hong-kong--2">Six Monthly Report to Parliament on Hong Kong</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/applications-for-201415-chevening-scholarships-now-open--2">Applications for 2014/15 Chevening Scholarships now open</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-zagreb-closed-for-easter-holidays">British Embassy Zagreb and British consulates are closed</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/272653.es-419">México recuerda el Día Internacional de la Eliminación de la Violencia contra la Mujer</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/263630.pt">Dia Mundial contra a Pena de Morte - Declaração Conjunta</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/294701.pt">SEMINÁRIO</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/boat-racing-festival-british-embassy-vientiane-closure--2">Boat Racing Festival - British Embassy Vientiane Closure</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-calls-for-closer-joint-work-in-south-east-asia-to-protect-children-from-trafficking--2">UK calls for closer joint work in South East Asia to protect children from trafficking</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/237972.es">José Ignacio Sánchez Galán, Presidente de Iberdrola,  miembro de la Orden del Imperio Británico</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--10">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/top-tips-for-uk-student-visa-applicants--5">Top tips for UK student visa applicants</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/262678.pt">Equipes britânicas de remo estão no Rio de Janeiro</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/289218.es-419">Llegará a México la mayor delegación Británica del sector turismo en la historia</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/257525.ar">قام سفير صاحبة الجلالة البريطانية بإلقاء كلمة أمام خادم الحرمين الشريفين الملك عبد الله خلال حفل تقديم أوراق اعتماد السفراء الذي تم عقده في جدة</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/st-davids-day-declaracion-ministro-principal-de-gales">St. Davids Day: Declaración Ministro Principal de Gales</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-uk-supports-the-kosovo-security-force-with-medical-training--2">The UK Supports the Kosovo Security Force with Medical Training</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/office-closure--3">Office Closure</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/ukuzbekistan-bilateral-relations--2">UK/Uzbekistan Bilateral Relations</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
