Hourly scheduled redeploy 696d3071142813c939889750b0290b04e93c5972

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/death-of-nelson-mandela">Death of Nelson Mandela</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-applicant-arrested-for-fraud--2">UK Visa Applicant Arrested for Fraud</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/farewell-happy-hour-to-celebrate-20162017-chevening-scholars">Farewell ‘happy hour’ to celebrate 2016/2017 Chevening scholars</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/201656.es-419">Uruguay participa en Cumbre de la Alianza para Gobierno Abierto</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/193179.ur">برطانوی سینئر فارن  آفس منسٹر بیرونیس وارثی کی پاکستان آمد</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-statement-on-iraq-human-rights-council-28th-session-geneva">UK Statement on Iraq, Human Rights Council, 28th session, Geneva</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/top-tips-for-uk-student-visa-applicants--3">Top tips for UK student visa applicants</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/235531.pt">Estado de SP e Reino Unido anunciam parceria</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/the-5th-uk-china-architecture-forum-held-in-guangzhou-on-4-july--2">The 5th UK-China Architecture Forum held in Guangzhou on 4 July</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/209290.ru">Укрепление свободы вероисповедания в Республике Казахстан</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--4">Advice for British nationals in Chennai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/--16">Ο Βρετανός Πρέσβης Τζων Κίττμερ στην Κρήτη</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/six-monthly-report-to-parliament-on-hong-kong--2">Six Monthly Report to Parliament on Hong Kong</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/applications-for-201415-chevening-scholarships-now-open--2">Applications for 2014/15 Chevening Scholarships now open</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-zagreb-closed-for-easter-holidays">British Embassy Zagreb and British consulates are closed</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/272653.es-419">México recuerda el Día Internacional de la Eliminación de la Violencia contra la Mujer</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/263630.pt">Dia Mundial contra a Pena de Morte - Declaração Conjunta</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/294701.pt">SEMINÁRIO</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/boat-racing-festival-british-embassy-vientiane-closure--2">Boat Racing Festival - British Embassy Vientiane Closure</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-calls-for-closer-joint-work-in-south-east-asia-to-protect-children-from-trafficking--2">UK calls for closer joint work in South East Asia to protect children from trafficking</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
